--- a/documents/documentation.html
+++ b/documents/documentation.html
@@ -6,6 +6,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KubeLife Documentation</title>
     <link rel="stylesheet" href="../styles.css"> <!-- Link to your existing styles -->
+    <style>
+        /* Background Video Styling */
+        #background-video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Ensures the video covers the full screen */
+            z-index: -1; /* Makes sure the video stays in the background */
+            opacity: 0.5; /* Dim the video to make text more visible */
+        }
+
+        /* Main Body Styling */
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #121212;
+            color: #fff;
+            overflow-x: hidden;
+        }
+
+        header {
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 20px;
+            text-align: center;
+            z-index: 100;
+            position: relative;
+        }
+
+        header h1 {
+            font-size: 3rem;
+            font-weight: 700;
+        }
+
+        /* Main Content Section */
+        main {
+            margin-top: 20px;
+            padding: 20px;
+        }
+
+        h2, h3 {
+            color: #fff;
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        ul, ol {
+            color: #fff;
+            margin-left: 20px;
+        }
+
+        li {
+            margin-bottom: 10px;
+        }
+
+        code {
+            background-color: #222;
+            color: #f1f1f1;
+            padding: 5px;
+            border-radius: 3px;
+        }
+
+        pre {
+            background-color: #222;
+            padding: 20px;
+            border-radius: 5px;
+            font-size: 1.2rem;
+            white-space: pre-wrap;
+            word-wrap: break-word;
+            color: #fff;
+        }
+
+        footer {
+            background-color: rgba(0, 0, 0, 0.8);
+            color: #fff;
+            padding: 15px;
+            text-align: center;
+            margin-top: 30px;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,17 +99,15 @@
         Your browser does not support the video tag.
     </video>
 
-    <header class="bg-dark text-white py-3">
-        <div class="container text-center">
-            <h1>KubeLife Documentation</h1>
-        </div>
+    <header>
+        <h1>KubeLife Documentation</h1>
     </header>
 
-    <main class="container my-5">
+    <main class="container">
         <!-- Key Features Section -->
         <section>
-            <h2 class="text-light">Key Features:</h2>
-            <ul class="text-light">
+            <h2>Key Features:</h2>
+            <ul>
                 <li>Docker & Docker Compose Validation: Ensures Docker and Docker Compose are installed before proceeding.</li>
                 <li>Static Website Hosting: Deploys HTML/CSS websites with Nginx using Docker.</li>
                 <li>Dockerfile & Docker Compose Setup: Automatically generates Dockerfile and docker-compose.yml for hosting the website.</li>
@@ -34,26 +115,26 @@
                 <li>Future Dynamic Hosting Support: Placeholder for dynamic web app deployment (under development).</li>
             </ul>
 
-            <h2 class="text-light">Installation & Setup:</h2>
-            <p class="text-light">Before running the script, ensure that you have the following installed:</p>
-            <ul class="text-light">
+            <h2>Installation & Setup:</h2>
+            <p>Before running the script, ensure that you have the following installed:</p>
+            <ul>
                 <li>Docker: To create and run containers.</li>
                 <li>Docker Compose: To manage multi-container Docker applications.</li>
             </ul>
 
-            <h3 class="text-light">How to Run:</h3>
-            <ol class="text-light">
+            <h3>How to Run:</h3>
+            <ol>
                 <li>Clone or Download the Script.</li>
                 <li>Make the Script Executable: <code>chmod +x kubelife.sh</code></li>
                 <li>Run the Script: <code>./kubelife.sh</code></li>
             </ol>
 
-            <h3 class="text-light">Static Website Deployment (HTML/CSS)</h3>
-            <p class="text-light">Choose "1" for static websites when prompted.</p>
-            <p class="text-light">Provide the web app information: type (HTML, CSS), directory path, image name, etc.</p>
+            <h3>Static Website Deployment (HTML/CSS)</h3>
+            <p>Choose "1" for static websites when prompted.</p>
+            <p>Provide the web app information: type (HTML, CSS), directory path, image name, etc.</p>
 
-            <h3 class="text-light">Example Walkthrough:</h3>
-            <pre class="text-light">
+            <h3>Example Walkthrough:</h3>
+            <pre>
 ./kubelife.sh
 Select the application type:
 1. Static Website
@@ -61,22 +142,22 @@ Select the application type:
 Enter your choice: 1
             </pre>
 
-            <h2 class="text-light">Troubleshooting:</h2>
-            <ul class="text-light">
+            <h2>Troubleshooting:</h2>
+            <ul>
                 <li>Docker Not Installed: Instructions will be provided.</li>
                 <li>Invalid Ports: You will be prompted to enter valid ports.</li>
                 <li>Missing index.html: The script will exit with an error.</li>
             </ul>
 
-            <h2 class="text-light">Future Improvements:</h2>
-            <ul class="text-light">
+            <h2>Future Improvements:</h2>
+            <ul>
                 <li>Dynamic Web App Deployment</li>
                 <li>SSL/TLS Support</li>
                 <li>Kubernetes Integration</li>
             </ul>
         </section>
 
-        <footer class="bg-dark text-white text-center py-3">
+        <footer>
             <p>&copy; 2024 KubeLife. All rights reserved.</p>
         </footer>
     </main>
