--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         Your browser does not support the video tag.
     </video>
 
+    <!-- Header -->
     <header class="bg-dark text-white py-3">
         <div class="container d-flex justify-content-between align-items-center">
             <h1 class="logo">KubeLife</h1>
@@ -42,32 +43,32 @@
             <a href="#documentation" class="btn btn-primary btn-lg mt-3 px-5 py-3 shadow-lg" style="font-size: 1.2rem;">Learn More</a>
         </section>
 
-        <!-- Tools Section -->
+        <!-- Integrated Tools Section -->
         <section class="tools-section" id="integrated-tools">
-            <h2 class="text-center">Integrated Tools</h2>
-            <div class="tools-cards d-flex justify-content-center flex-wrap gap-3">
+            <h2 class="text-center mb-4">Integrated Tools</h2>
+            <div class="tools-cards d-flex justify-content-center flex-wrap gap-4">
                 <!-- Tool Cards -->
-                <div class="tools-card">
+                <div class="tools-card" data-aos="fade-up">
                     <img src="images/CiCd.png" alt="CI/CD" class="img-fluid mb-3 logo-size">
                     <h4>CI/CD</h4>
                     <p>Seamless integration for continuous integration and delivery.</p>
                 </div>
-                <div class="tools-card">
+                <div class="tools-card" data-aos="fade-up" data-aos-delay="100">
                     <img src="images/docker.png" alt="Docker" class="img-fluid mb-3 logo-size">
                     <h4>Docker</h4>
                     <p>Streamline application deployment with containerization.</p>
                 </div>
-                <div class="tools-card">
+                <div class="tools-card" data-aos="fade-up" data-aos-delay="200">
                     <img src="images/Kubernetes.png" alt="Kubernetes" class="img-fluid mb-3 logo-size">
                     <h4>Kubernetes</h4>
                     <p>Effortless orchestration for complex cloud environments.</p>
                 </div>
-                <div class="tools-card">
+                <div class="tools-card" data-aos="fade-up" data-aos-delay="300">
                     <img src="images/Prometheus.png" alt="Prometheus" class="img-fluid mb-3 logo-size">
                     <h4>Prometheus</h4>
                     <p>Advanced monitoring and alerting for cloud infrastructure.</p>
                 </div>
-                <div class="tools-card">
+                <div class="tools-card" data-aos="fade-up" data-aos-delay="400">
                     <img src="images/grafana.png" alt="Grafana" class="img-fluid mb-3 logo-size">
                     <h4>Grafana</h4>
                     <p>Visualize and analyze your cloud infrastructure metrics.</p>
@@ -76,7 +77,7 @@
         </section>
 
         <!-- About Section -->
-        <section class="about-section mt-5 text-center">
+        <section class="about-section mt-5 text-center" data-aos="fade-left">
             <h2>About KubeLife</h2>
             <img src="images/hero-image.jpg" alt="Hero Image" class="img-fluid my-4" style="border-radius: 8px; max-height: 300px;">
             <p><strong>Devesh Singh Rathore</strong> is the creator of KubeLife, a tool designed to revolutionize cloud computing using Kubernetes and Docker.</p>
@@ -85,11 +86,11 @@
         </section>
 
         <!-- Documentation Section -->
-        <section id="documentation" class="documentation mt-5">
+        <section id="documentation" class="documentation mt-5" data-aos="fade-up">
             <h2 class="text-center">Documentation</h2>
             <div class="row">
-                <div class="col-md-6">
-                    <div class="card">
+                <div class="col-md-6 mb-4">
+                    <div class="card shadow-lg">
                         <img src="images/logo.png" alt="KubeLife Documentation" class="card-img-top logo-size">
                         <div class="card-body">
                             <h5 class="card-title">KubeLife Deployment</h5>
@@ -98,8 +99,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="card">
+                <div class="col-md-6 mb-4">
+                    <div class="card shadow-lg">
                         <img src="images/docker.png" alt="Docker Basics" class="card-img-top logo-size">
                         <div class="card-body">
                             <h5 class="card-title">Docker and Kubernetes Basics</h5>
@@ -112,6 +113,7 @@
         </section>
     </main>
 
+    <!-- Footer Section -->
     <footer class="bg-dark text-white text-center py-3">
         <div class="footer-logo-container">
             <img src="images/logo.png" alt="KubeLife Logo" class="footer-logo logo-size">
