--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Background Video -->
     <video autoplay loop muted id="background-video">
-        <source src="kubedge_background.mp4" type="video/mp4">
+        <source src="kubelife_background.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
